--- a/WaviestBalloon.html
+++ b/WaviestBalloon.html
@@ -4,12 +4,12 @@
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<meta name="title" content="WaviestBalloon">
+<meta name="title" content="Astrid">
 <meta name="description" content="My portfolio n&#39; stuff">
-<meta property="twitter:image" content="https://fur.dev/assets/whiteex.png">
-<meta property="og:image" content="https://fur.dev/assets/whiteex.png">
-<title>WaviestBalloon</title>
-<link rel="icon" href="https://fur.dev/assets/invertedex.png">
+<meta property="twitter:image" content="./WaviestBalloon_files/whiteex.png">
+<meta property="og:image" content="./WaviestBalloon_files/whiteex.png">
+<title>Astrid</title>*
+<link rel="icon" href="./WaviestBalloon_files/invertedex.png">
 <link rel="stylesheet" href="./WaviestBalloon_files/style.css">
 <script async="" src="./WaviestBalloon_files/invisible.js.download"></script></head>
 <body>
@@ -18,40 +18,40 @@
 <img src="./WaviestBalloon_files/corner.svg" class="bottomleft" width="75vim">
 <img src="./WaviestBalloon_files/corner.svg" class="bottomright" width="75vim"></div>
 <center>
-<p class="bottomlefttext" style="font-size: 1.85vmin;">[ CRADEX.LIVE ]<br>MAIN PAGE</p>
+<p class="bottomlefttext" style="font-size: 1.85vmin;">[ CRADEX.LIVE ]</p>
 </center>
 <center>
 <br><p>Definitely not stolen from fur.dev</p>
 <br>
 <img src="./WaviestBalloon_files/whiteex.png" width="135vim">
-<h1 style="font-size: 175%;"><b>WaviestBalloon</b></h1>
-<p>[ Full-stack developer/Graphics designer ]</p>
+<h1 style="font-size: 175%;"><b>Astridlol</b></h1>
+<p>[ Content Creator/Dumb Wannabe Programmer  ]</p>
 <br>
-<a href="https://github.com/WaviestBalloon/" target="_blank" class="underline">GitHub</a> | <a href="https://steamcommunity.com/id/waviestballoonx9" target="_blank" class="underline">Steam</a> | <a href="https://status.wav.blue/" target="_blank" class="underline">Status</a>
+<a href="https://github.com/AstridWasHereLOL/" target="_blank" class="underline">GitHub</a> | <a href="https://steamcommunity.com/id/astridlol" target="_blank" class="underline">Steam</a> | <a href="https://cradex.live/theberg" target="_blank" class="underline">Theberg</a>
 <br>
 <br>
-<h1><b>Projects</b></h1>
+<h1><b>Links and Such</b></h1>
 <div id="section-protobyte" style="background: linear-gradient(75deg, #7c85e0, #c738cd); padding-left: 0%; padding-right: 0%; width: 100%; height: auto;">
 <br>
-<img src="./WaviestBalloon_files/protobytebannerLONG.png" width="35%">
+<img src="./WaviestBalloon_files/Twitch-logo.png" width="35%">
 <br>
-<h1>ProtoByte is a multipurpose bot on Discord, it was developed entirely in TypeScript by me and Danii<br>It contains number of features including viewing Reddit, image searching, general administration tools and more<br><br>Invite ProtoByte to your server via TopGG <a href="https://top.gg/bot/877347193328111666" target="_blank" class="underline">here</a><br>ProtoByte was built with privacy in mind, view our <a href="https://fur.dev/protobyte/policy/" target="_blank" class="underline">Privacy Policy</a></h1>
+<h1>My Twitch where I stream mostly games, though not often<br>I usually only stream with people such as Cradex, Malachi, and a few others<br><br>Link to it <a href="https://twitch.tv/astridwasherelol" target="_blank" class="underline">here</a></h1>
 <br>
 </div>
 <hr>
 <div id="section-iz" style="background: #ff3838; background-image: url(&#39;./dotlogoutbg.png&#39;); background-size: 25px 25px; background-position: center; background-repeat: repeat; padding-left: 0px; padding-right: 0px; width: 100%; height: auto;">
+<br><br>
+<img src="./WaviestBalloon_files/yt_logo_rgb_dark.png" width="35%">
 <br>
-<img src="./WaviestBalloon_files/izlogobanner.png" width="35%">
-<br>
-<h1>InsanityZero (IZ) is a experimental sci-fi FPS game that is inspired by BONEWORKS<br><br><img src="./WaviestBalloon_files/warningicon.png" width="5%"><br><i>Heavily work-in-progress, more information soon</i></h1>
+<h1><br>My YouTube channel that I attempt to upload to<br><i>It's mostly random skits and other compilations I make from games</i><br><br>Link to it <a href="https://youtube.com/@astridlol" target="_blank" class="underline">here</a><br></h1>
 <br>
 </div>
 <hr>
-<div id="section-nlb" style="background: #f89300; padding-left: 0px; padding-right: 0px; width: 100%; height: auto;">
+<div id="section-nlb" style="background: #98F6C6; padding-left: 0px; padding-right: 0px; width: 100%; height: auto;">
 <br>
-<img src="./WaviestBalloon_files/nlb.png" style="border-radius: 55px;" width="10%">
+<img src="./WaviestBalloon_files/WaviestBalloon.gif" style="border-radius: 55px;" width="10%">
 <br>
-<h1>NeedsLessBits<br>NLB is a Discord bot developed by me as a bit of a joke<br>The bot will hypercompress and bitcrush any video you throw at it</h1>
+<h1>WaviestBalloon<br><br><i>The Person I took this website from</i><br>Give their work a look, they create great stuff and I personally appreciate them</h1>
 <br>
 </div>
 <hr>
@@ -59,7 +59,7 @@
 <br>
 <img src="./WaviestBalloon_files/theberg.gif" style="border-radius: 125px;" width="7.5%">
 <br>
-<h1>MyNameIsWalterHartwellWhite<br>A website to tell your confession, <i>and to see your IP</i><br>The website <b>purges logs and cached videos within 2-3 minutes</b>, inspired by Battle Of Wits joke website<br><br>A live version is available on my server, <a href="https://niko.wav.blue/" target="_blank" class="underline">try it out</a> or check out the <a href="https://github.com/WaviestBalloon/MyNameIsWalterHartwellWhite" target="_blank" class="underline">GitHub repo</a></h1>
+<h1><br>A fork of <b>MyNameIsWalterHartwellWhite</b><br>A website to tell your confession, <i>and to see your IP</i><br>The website <b>purges logs and cached videos within 2-3 minutes</b>, inspired by Battle Of Wits joke website<br><br>A live version is available on my server, <a href="https://cradex.live/theberg" target="_blank" class="underline">try it out</a> or check out the <a href="https://github.com/AstridWasHereLOL/MyNameIsWalterHartwellWhite" target="_blank" class="underline">GitHub repo</a></h1>
 <br>
 </div>
 <br>
