rebrand Theberg as Dequavon

--- a/WaviestBalloon.html
+++ b/WaviestBalloon.html
@@ -23,11 +23,11 @@
 <center>
 <br><p>Definitely not stolen from fur.dev</p>
 <br>
-<img src="./WaviestBalloon_files/whiteex.png" width="135vim">
+<img src="./WaviestBalloon_files/whiteex.png" style="border-radius: 55px;" width="135vim">
 <h1 style="font-size: 175%;"><b>Astridlol</b></h1>
 <p>[ Content Creator/Dumb Wannabe Programmer  ]</p>
 <br>
-<a href="https://github.com/AstridWasHereLOL/" target="_blank" class="underline">GitHub</a> | <a href="https://steamcommunity.com/id/astridlol" target="_blank" class="underline">Steam</a> | <a href="https://cradex.live/theberg" target="_blank" class="underline">Theberg</a>
+<a href="https://github.com/AstridWasHereLOL/" target="_blank" class="underline">GitHub</a> | <a href="https://steamcommunity.com/id/astridlol" target="_blank" class="underline">Steam</a> | <a href="https://cradex.live/theberg" target="_blank" class="underline">DeQuavon</a>
 <br>
 <br>
 <h1><b>Links and Such</b></h1>
