--- a/WaviestBalloon.html
+++ b/WaviestBalloon.html
@@ -8,7 +8,7 @@
 <meta name="description" content="My portfolio n&#39; stuff">
 <meta property="twitter:image" content="./WaviestBalloon_files/whiteex.png">
 <meta property="og:image" content="./WaviestBalloon_files/whiteex.png">
-<title>Astrid</title>*
+<title>Astrid</title>
 <link rel="icon" href="./WaviestBalloon_files/invertedex.png">
 <link rel="stylesheet" href="./WaviestBalloon_files/style.css">
 <script async="" src="./WaviestBalloon_files/invisible.js.download"></script></head>
