fix dequavon links

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <h1 style="font-size: 175%;"><b>Astridlol</b></h1>
 <p>[ Content Creator/Dumb Wannabe Programmer  ]</p>
 <br>
-<a href="https://github.com/AstridWasHereLOL/" target="_blank" class="underline">GitHub</a> | <a href="https://steamcommunity.com/id/astridlol" target="_blank" class="underline">Steam</a> | <a href="https://cradex.live/theberg" target="_blank" class="underline">DeQuavon</a>
+<a href="https://github.com/AstridWasHereLOL/" target="_blank" class="underline">GitHub</a> | <a href="https://steamcommunity.com/id/astridlol" target="_blank" class="underline">Steam</a> | <a href="https://dequavonjr.cradex.live/theberg" target="_blank" class="underline">DeQuavon</a>
 <br>
 <br>
 <h1><b>Links and Such</b></h1>
@@ -59,7 +59,7 @@
 <br>
 <img src="./WaviestBalloon_files/theberg.gif" style="border-radius: 125px;" width="7.5%">
 <br>
-<h1><br>A fork of <b>MyNameIsWalterHartwellWhite</b><br>A website to tell your confession, <i>and to see your IP</i><br>The website <b>purges logs and cached videos within 2-3 minutes</b>, inspired by Battle Of Wits joke website<br><br>A live version is available on my server, <a href="https://cradex.live/theberg" target="_blank" class="underline">try it out</a> or check out the <a href="https://github.com/AstridWasHereLOL/MyNameIsWalterHartwellWhite" target="_blank" class="underline">GitHub repo</a></h1>
+<h1><br>A fork of <b>MyNameIsWalterHartwellWhite</b><br>A website to tell your confession, <i>and to see your IP</i><br>The website <b>purges logs and cached videos within 2-3 minutes</b>, inspired by Battle Of Wits joke website<br><br>A live version is available on my server, <a href="https://dequavonjr.cradex.live/theberg" target="_blank" class="underline">try it out</a> or check out the <a href="https://github.com/AstridWasHereLOL/MyNameIsWalterHartwellWhite" target="_blank" class="underline">GitHub repo</a></h1>
 <br>
 </div>
 <br>
