--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <br>
 </div>
 <hr>
-<div id="section-nlb" style="background: #71C4FC; padding-left: 0px; padding-right: 0px; width: 100%; height: auto;">
+<div id="section-nlb" style="background: #98F6C6; color: #71C4FC; padding-left: 0px; padding-right: 0px; width: 100%; height: auto;">
 <br>
 <img src="./WaviestBalloon_files/WaviestBalloon.gif" style="border-radius: 55px;" width="10%">
 <br>
