--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
 <meta name="title" content="Astrid">
 <meta name="description" content="My portfolio n&#39; stuff">
-<meta property="twitter:image" content="./WaviestBalloon_files/whiteex.png">
-<meta property="og:image" content="./WaviestBalloon_files/whiteex.png">
+<meta property="twitter:image" content="https://cradex.live/WaviestBalloon_files/whiteex.png">
+<meta property="og:image" content="https://cradex.live/WaviestBalloon_files/whiteex.png">
 <title>Astrid</title>
 <link rel="icon" href="./WaviestBalloon_files/invertedex.png">
 <link rel="stylesheet" href="./WaviestBalloon_files/style.css">
