undid weird text shadow
looks illegible on lower resolutions

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <br>
 <br>
 <h1><b>Links and Such</b></h1>
-<div id="section-protobyte" style="background: linear-gradient(75deg, #dcb7ff, #a645ff); color: #ffffff; -webkit-text-stroke: 1px #a645ff; text-shadow: 2px 2px #a645ff;  padding-left: 0%; padding-right: 0%; width: 100%; height: auto;">
+<div id="section-protobyte" style="background: linear-gradient(75deg, #dcb7ff, #a645ff); color: #ffffff; padding-left: 0%; padding-right: 0%; width: 100%; height: auto;">
 <br>
 <img src="./WaviestBalloon_files/Twitch-logo.png" width="35%">
 <br>
@@ -39,7 +39,7 @@
 <br>
 </div>
 <hr>
-<div id="section-iz" style="background: #ff3838; color: #ffffff; -webkit-text-stroke: 1px #FF0000; text-shadow: 2px 2px #FF0000; background-image: url(&#39;./dotlogoutbg.png&#39;); background-size: 25px 25px; background-position: center; background-repeat: repeat; padding-left: 0px; padding-right: 0px; width: 100%; height: auto;">
+<div id="section-iz" style="background: #ff3838; color: #ffffff; background-image: url(&#39;./dotlogoutbg.png&#39;); background-size: 25px 25px; background-position: center; background-repeat: repeat; padding-left: 0px; padding-right: 0px; width: 100%; height: auto;">
 <br><br>
 <img src="./WaviestBalloon_files/yt_logo_rgb_dark.png" width="35%">
 <br>
@@ -47,7 +47,7 @@
 <br>
 </div>
 <hr>
-<div id="section-nlb" style="background: #98F6C6; color: #71C4FC; -webkit-text-stroke: 1px #070285; text-shadow: 2px 2px #070285; padding-left: 0px; padding-right: 0px; width: 100%; height: auto;">
+<div id="section-nlb" style="background: #98F6C6; color: #070285; padding-left: 0px; padding-right: 0px; width: 100%; height: auto;">
 <br>
 <img src="./WaviestBalloon_files/WaviestBalloon.gif" style="border-radius: 55px;" width="10%">
 <br>
@@ -55,7 +55,7 @@
 <br>
 </div>
 <hr>
-<div id="section-walt" style="background: #272727; color: #ffffff; -webkit-text-stroke: 1px #471304; text-shadow: 2px 2px #471304;  padding-left: 0px; padding-right: 0px; width: 100%; height: auto;">
+<div id="section-walt" style="background: #272727; color: #ffffff; padding-left: 0px; padding-right: 0px; width: 100%; height: auto;">
 <br>
 <img src="./WaviestBalloon_files/theberg.gif" style="border-radius: 125px;" width="7.5%">
 <br>
