updated to be COOLER

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<meta name="title" content="Astrid">
-<meta name="description" content="My portfolio n&#39; stuff">
+<meta name="title" content="Snowy">
+<meta name="description" content="Snowy&#39;s social pages">
 <meta property="twitter:image" content="https://cradex.live/WaviestBalloon_files/Astrid.png">
 <meta property="og:image" content="https://cradex.live/WaviestBalloon_files/Astrid.png">
-<title>Astrid</title>
+<title>Snowy</title>
 <link rel="icon" href="./WaviestBalloon_files/Astrid.png">
 <link rel="stylesheet" href="./WaviestBalloon_files/style.css">
 <script async="" src="./WaviestBalloon_files/invisible.js.download"></script></head>
@@ -21,21 +21,20 @@
 <p class="bottomlefttext" style="font-size: 1.85vmin;">[ ASTRIDWASHERE.LOL ]</p>
 </center>
 <center>
-<br><p>Definitely not stolen from fur.dev</p>
 <br>
 <img src="./WaviestBalloon_files/Astrid.png" style="border-radius: 55px;" width="135vim">
-<h1 style="font-size: 175%;"><b>Astridlol</b></h1>
-<p>[ Content Creator/Dumb Wannabe Programmer  ]</p>
+<h1 style="font-size: 175%;"><b>Snowy</b></h1>
+<p>[ Content creator / Very amateur producer  ]</p>
 <br>
-<a href="https://github.com/AstridWasHereLOL/" target="_blank" class="underline">GitHub</a> | <a href="https://steamcommunity.com/id/astridlol" target="_blank" class="underline">Steam</a> | <a href="https://www.roblox.com/users/125400674/profile" target="_blank" class="underline">Roblox</a>
+<a href="https://discord.gg/vEhBNP3mvJ" target="_blank" class="underline">Discord</a> | <a href="https://steamcommunity.com/id/astridlol" target="_blank" class="underline">Steam</a> | <a href="https://twitter.com/@hereastridwas" target="_blank" class="underline">Twitter</a>
 <br>
 <br>
 <h1><b>Links and Such</b></h1>
-<div id="section-protobyte" style="background: linear-gradient(75deg, #dcb7ff, #a645ff); color: #ffffff; padding-left: 0%; padding-right: 0%; width: 100%; height: auto;">
+<div id="section-protobyte" style="background: linear-gradient(75deg, #5bcefa, #f5a9b8); color: #000000; padding-left: 0%; padding-right: 0%; width: 100%; height: auto;">
 <br>
-<img src="./WaviestBalloon_files/Twitch-logo.png" width="35%">
+<img src="./WaviestBalloon_files/owocommunity.png" width="10%">
 <br>
-<h1>My Twitch where I stream mostly games, though not often<br>I usually only stream with people such as Cradex, Malachi, and a few others<br><br>Link to it <a href="https://twitch.tv/astridwasherelol" target="_blank" class="underline">here</a></h1>
+<h1>A social media platform where I shitpost<br>"The zone for literally anything 🐈 Mainly for nerdy tech stuf (ew!) but also for LGBTQ+!"<br><br>Link to my profile <a href="https://owo.community/@snowy" target="_blank" class="underline">here</a></h1>
 <br>
 </div>
 <hr>
@@ -47,19 +46,11 @@
 <br>
 </div>
 <hr>
-<div id="section-nlb" style="background: #98F6C6; color: #070285; padding-left: 0px; padding-right: 0px; width: 100%; height: auto;">
+<div id="section-nlb" style="background: #e86716; color: #ffffff; padding-left: 0px; padding-right: 0px; width: 100%; height: auto;">
 <br>
-<img src="./WaviestBalloon_files/WaviestBalloon.gif" style="border-radius: 55px;" width="10%">
+<img src="./WaviestBalloon_files/flstudio.png" style="border-radius: 55px;" width="10%">
 <br>
-<h1>WaviestBalloon<br><br><i>The Person I took this website from</i><br>Give their work a look, they create great stuff and I personally appreciate them</h1>
-<br>
-</div>
-<hr>
-<div id="section-walt" style="background: #272727; color: #ffffff; padding-left: 0px; padding-right: 0px; width: 100%; height: auto;">
-<br>
-<img src="./WaviestBalloon_files/theberg.gif" style="border-radius: 125px;" width="7.5%">
-<br>
-<h1><br>A fork of <b>MyNameIsWalterHartwellWhite</b><br>A website to tell your confession, <i>and to see your IP</i><br>The website <b>purges logs and cached videos within 2-3 minutes</b>, inspired by Battle Of Wits joke website<br>Check out the <a href="https://github.com/AstridWasHereLOL/MyNameIsWalterHartwellWhite" target="_blank" class="underline">GitHub repo</a></h1>
+<h1>FL Studio<br><br><i>The software I use to make my beats</i><br>They have a really cool free trial that lets you decide if you wanna pay to use it</h1>
 <br>
 </div>
 <br>
