--- a/index.html
+++ b/index.html
@@ -30,27 +30,35 @@
 <br>
 <br>
 <h1><b>Links and Such</b></h1>
-<div id="section-protobyte" style="background: linear-gradient(75deg, #5bcefa, #f5a9b8); color: #000000; padding-left: 0%; padding-right: 0%; width: 100%; height: auto;">
+<div id="section-owo" style="background: linear-gradient(75deg, #5bcefa, #f5a9b8); color: #000000; padding-left: 0%; padding-right: 0%; width: 100%; height: auto;">
 <br>
-<img src="./WaviestBalloon_files/owocommunity.png" width="10%">
+<img src="./WaviestBalloon_files/owocommunity.png" style="border-radius: 55px;" width="10%">
 <br>
-<h1>A social media platform where I shitpost<br>"The zone for literally anything 🐈 Mainly for nerdy tech stuf (ew!) but also for LGBTQ+!"<br><br>Link to my profile <a href="https://owo.community/@snowy" target="_blank" class="underline">here</a></h1>
+<h1>Snowy on owo.community<br><br>A social media platform where I shitpost<br>"The zone for literally anything 🐈 Mainly for nerdy tech stuf (ew!) but also for LGBTQ+!"<br><br>Link to my profile <a href="https://owo.community/@snowy" target="_blank" class="underline">here</a></h1>
 <br>
 </div>
 <hr>
-<div id="section-iz" style="background: #ff3838; color: #ffffff; background-image: url(&#39;./dotlogoutbg.png&#39;); background-size: 25px 25px; background-position: center; background-repeat: repeat; padding-left: 0px; padding-right: 0px; width: 100%; height: auto;">
+<div id="section-yt" style="background: #ff3838; color: #ffffff; background-image: url(&#39;./dotlogoutbg.png&#39;); background-size: 25px 25px; background-position: center; background-repeat: repeat; padding-left: 0px; padding-right: 0px; width: 100%; height: auto;">
 <br><br>
-<img src="./WaviestBalloon_files/yt_logo_rgb_dark.png" width="35%">
+<img src="./WaviestBalloon_files/YouTube_full-color_icon.svg" width="10%">
 <br>
-<h1><br>My YouTube channel that I attempt to upload to<br><i>It's mostly random skits and other compilations I make from games</i><br><br>Link to it <a href="https://youtube.com/@astridlol" target="_blank" class="underline">here</a><br></h1>
+<h1>Snowy on YouTube<br><br>My YouTube channel that I attempt to upload to<br><i>It's mostly random skits and other compilations I make from games</i><br><br>Link to it <a href="https://youtube.com/@astridlol" target="_blank" class="underline">here</a><br></h1>
 <br>
 </div>
 <hr>
-<div id="section-nlb" style="background: #e86716; color: #ffffff; padding-left: 0px; padding-right: 0px; width: 100%; height: auto;">
+<div id="section-spot" style="background: #000000; color: #ffffff; padding-left: 0px; padding-right: 0px; width: 100%; height: auto;">
 <br>
-<img src="./WaviestBalloon_files/flstudio.png" style="border-radius: 55px;" width="10%">
+<img src="./WaviestBalloon_files/Spotify_logo_without_text.svg" style="border-radius: 55px;" width="10%">
 <br>
-<h1>FL Studio<br><br><i>The software I use to make my beats</i><br>They have a really cool free trial that lets you decide if you wanna pay to use it</h1>
+<h1>Snowy on Spotify<br><br><i>My Spotify artist profile!</i><br>I usually just make simple beats out of cymatics samples that I purchase.<br>Link to it <a href="https://open.spotify.com/artist/2tRdjWrJKs004T11JnK1bJ?si=53ef47aac010451e" target="_blank" class="underline">here!</a><br></h1>
+<br>
+</div>
+<hr>
+<div id="section-insta" style="background: linear-gradient(75deg, #FEC200, #FD009E); color: #ffffff; padding-left: 0px; padding-right: 0px; width: 100%; height: auto;">
+<br>
+<img src="./WaviestBalloon_files/Instagram_logo_2022.svg" style="border-radius: 55px;" width="10%">
+<br>
+<h1>Snowy on Instagram<br><br><i>My Instagram profile!</i><br>I usually just post shit about my music on here, nothing else<br>Link to it <a href="https://open.spotify.com/artist/2tRdjWrJKs004T11JnK1bJ?si=53ef47aac010451e" target="_blank" class="underline">here!</a><br></h1>
 <br>
 </div>
 <br>
