attempt to fix embed

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
 <meta name="title" content="Snowy">
 <meta name="description" content="Snowy&#39;s social pages">
-<meta property="twitter:image" content="https://cradex.live/WaviestBalloon_files/Astrid.png">
-<meta property="og:image" content="https://cradex.live/WaviestBalloon_files/Astrid.png">
+<meta property="twitter:image" content="https://astridwashere.lol/WaviestBalloon_files/Astrid.png">
+<meta property="og:image" content="https://astridwashere.lol/WaviestBalloon_files/Astrid.png">
 <title>Snowy</title>
 <link rel="icon" href="./WaviestBalloon_files/Astrid.png">
 <link rel="stylesheet" href="./WaviestBalloon_files/style.css">
