--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 <a href="https://discord.gg/vEhBNP3mvJ" target="_blank" class="underline">Discord</a> | <a href="https://steamcommunity.com/id/astridlol" target="_blank" class="underline">Steam</a> | <a href="https://twitter.com/@hereastridwas" target="_blank" class="underline">Twitter</a>
 <br>
 <br>
+<h1>PSA!!</h1>Threads, Twitter, Instagram, and Meta as a whole are not great platforms to be using, consider some of the open-source alternatives I use linked below!
+<br>
+<br>
 <h1><b>Links and Such</b></h1>
 <div id="section-owo" style="background: linear-gradient(75deg, #5bcefa, #f5a9b8); color: #000000; padding-left: 0%; padding-right: 0%; width: 100%; height: auto;">
 <br>
@@ -54,11 +57,11 @@
 <br>
 </div>
 <hr>
-<div id="section-insta" style="background: linear-gradient(75deg, #FEC200, #FD009E); color: #ffffff; padding-left: 0px; padding-right: 0px; width: 100%; height: auto;">
+<div id="section-insta" style="background: #ffffff; color: #000000; padding-left: 0px; padding-right: 0px; width: 100%; height: auto;">
 <br>
-<img src="./WaviestBalloon_files/Instagram_logo_2022.svg" style="border-radius: 55px;" width="10%">
+<img src="https://static.spacehey.net/img/logo_blue.svg" width="30%">
 <br>
-<h1>Snowy on Instagram<br><br><i>My Instagram profile!</i><br>I usually just post shit about my music on here, nothing else<br>Link to it <a href="https://open.spotify.com/artist/2tRdjWrJKs004T11JnK1bJ?si=53ef47aac010451e" target="_blank" class="underline">here!</a><br></h1>
+<h1>Snowy on SpaceHey<br><br><i>Because MySpace isn't good enough</i><br>I like to make shitpost blogs because why not<br>Link to it <a href="https://spacehey.com/snowylovesyou" target="_blank" class="underline">here</a><br></h1>
 <br>
 </div>
 <br>
