undo some things and make the jawn work

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <p class="bottomlefttext" style="font-size: 1.85vmin;">[ ASTRIDWASHERE.LOL ]</p>
 </center>
 <center>
+<h1>Urgent! <a href="https://astridwashere.lol/notice" target="_blank" class="underline">Fight for our internet rights!</a></h1>
 <br>
 <img src="./WaviestBalloon_files/Astrid.png" style="border-radius: 55px;" width="135vim">
 <h1 style="font-size: 175%;"><b>Snowy</b></h1>
