complete some more things

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 </center>
 <center>
 <h1>Urgent! <a href="https://astridwashere.lol/notice" target="_blank" class="underline">Fight for our internet rights!</a></h1>
+<h3>Even if you're not in the US, this can affect companies based in the US and therefore, you!</h3>
 <br>
 <img src="./WaviestBalloon_files/Astrid.png" style="border-radius: 55px;" width="135vim">
 <h1 style="font-size: 175%;"><b>Snowy</b></h1>
