--- a/notice/KOSA/index.html
+++ b/notice/KOSA/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <meta name="title" content="Snowy">
-<meta name="description" content="Snowy&#39;s social pages">
+<meta name="description" content="Stop the KOSA bill and save our rights">
 <meta property="twitter:image" content="https://astridwashere.lol/WaviestBalloon_files/Astrid.png">
 <meta property="og:image" content="https://astridwashere.lol/WaviestBalloon_files/Astrid.png">
 <title>Snowy</title>
