--- a/notice/KOSA/index.html
+++ b/notice/KOSA/index.html
@@ -29,6 +29,8 @@
 <h1>First, KOSA would pressure platforms to install filters that would wipe the net of anything deemed “inappropriate” for minors. This = instructing platforms to censor, plain and simple. Places that already use content filters have restricted important information about suicide prevention and LGBTQ+ support groups, and KOSA would spread this kind of censorship to every corner of the internet. Its no surprise that anti-rights zealots are excited about KOSA: it would let them shut down websites that cover topics like race, gender, and sexuality.</h1>
 <br>
 <h1>Second, KOSA would ramp up the online surveillance of all internet users by expanding the use of age verification and parental monitoring tools. Not only are these tools needlessly invasive, they are a massive safety risk for young people who could be trying to escape domestic violence and abuse. </h1>
+<br>
+<h1>--stopKOSA.com</h1>
 <br><br>
 <h1><a href="https://www.stopkosa.com" target="_blank" class="underline">Vote to erradicate this nonsense!</a></h1>
 <br><br><br><br>
