--- a/notice/index.html
+++ b/notice/index.html
@@ -23,7 +23,7 @@
 <center>
 <br>
 <br>
-<h1><span style="font-size: 40px">A massive invasion of our privacy is currently in the process of being passed in the US called the <h1><a href="https://astridwashere.lol/notice/KOSA" target="_blank" class="underline" style="font-size: 40px">"Kids Online Privacy Act"</a></span></h1>
+<h1><span style="font-size: 40px">A massive invasion of our privacy is currently in the process of being passed in the US called the <h1><a href="https://astridwashere.lol/notice/KOSA" target="_blank" class="underline" style="font-size: 40px">"Kids Online Safety Act"</a></span></h1>
 <br>
 <h1>Essentially, this bill will completely erase anything that the government deems too poltical or controversial for "children" (teens like me and you)</h1>
 <br>
