i did quite the stuff
yessir

--- a/Gallery/index.html
+++ b/Gallery/index.html
@@ -18,10 +18,28 @@
 <img src="./WaviestBalloon_files/corner.svg" class="bottomleft" width="75vim">
 <img src="./WaviestBalloon_files/corner.svg" class="bottomright" width="75vim"></div>
 <center>
-<p class="bottomlefttext" style="font-size: 1.85vmin;">[ ASTRIDWASHERE.LOL ]</p>
+<h1><a href="https://astridwashere.lol" target="_blank" class="underline">Home</a> | <a href="https://astridwashere.lol/Gallery" target="_blank" class="underline">Gallery</a> | <a href="https://astridwashere.lol/notice" target="_blank" class="underline">KOSA</a></h1>
+<p class="bottomlefttext" style="font-size: 1.85vmin;">[ ASTRIDWASHERE.LOL ] </p>
+<br><br>
+<h1>AMD logos and branding are courtesy of the free <a href="https://library.amd.com" target="_blank" class="underline">AMD Library</a>
+<br><br>
 </center>
 <center>
-
+	<!--<div>
+		<img src="./gallery/221661138-A_AMD_Ryzen7_5000Series_Radeon_Badge_E_RGB.png" alt="Ryzen 7 | Radeon badge" width=665 height=299/>
+		<p class="description_content">My PC Badges</p>
+	</div>-->
+	<div class="container">
+		<img src="./gallery/221661138-A_AMD_Ryzen7_5000Series_Radeon_Badge_E_RGB.png" alt="Ryzen 7 | Radeon badge" style="width:25%; height:25%;" >
+		<p class="description_content">My PC Badges</p>
+	  </div>
+	<div>
+		<video style="width:25%; height:25%;" controls>
+		<source src="./gallery/20321883 RyzenRadeon Logo Anim_4sec_4K_NO SOUND.mp4" type=video/mp4>
+	  		</video>
+		<p class="description_content">Ryzen | Radeon video banner</p>
+		</div>
+<br><br><br><br><br><br><br><br>
 </center>
 <script>
 			
