--- a/Gallery/index.html
+++ b/Gallery/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <meta name="title" content="Snowy">
-<meta name="description" content="fuck">
+<meta name="description" content="Snowys personal media gallery">
 <meta property="twitter:image" content="https://astridwashere.lol/WaviestBalloon_files/Astrid.png">
 <meta property="og:image" content="https://astridwashere.lol/WaviestBalloon_files/Astrid.png">
 <title>Snowy</title>
