new TwoMinus branch

--- a/index.html
+++ b/index.html
@@ -18,21 +18,18 @@
 <img src="./WaviestBalloon_files/corner.svg" class="bottomleft" width="75vim">
 <img src="./WaviestBalloon_files/corner.svg" class="bottomright" width="75vim"></div>
 <center>
-	<h1><a href="https://astridwashere.lol" target="_blank" class="underline">Home</a> | <a href="https://astridwashere.lol/Gallery" target="_blank" class="underline">Gallery</a> | <a href="https://astridwashere.lol/notice" target="_blank" class="underline">KOSA</a></h1>
+	<h1><a href="https://astridwashere.lol" target="_blank" class="underline">Home</a> | <a href="https://astridwashere.lol/Gallery" target="_blank" class="underline">Gallery</a> | <a href="https://astridwashere.lol/notice" target="_blank" class="underline">KOSA</a> | <a href="https://astridwashere.lol/TwoMinus" target="_blank" class="underline">TwoMinus</a></h1>
 <p class="bottomlefttext" style="font-size: 1.85vmin;">[ ASTRIDWASHERE.LOL ]</p>
 </center>
 <center>
-<h1>Urgent! <a href="https://astridwashere.lol/notice" target="_blank" class="underline">Fight for our internet rights!</a></h1>
-<h3>Even if you're not in the US, this can affect companies based in the US and therefore, you!</h3>
 <br>
 <img src="./WaviestBalloon_files/Astrid.png" style="border-radius: 55px;" width="135vim">
 <h1 style="font-size: 175%;"><b>Snowy</b></h1>
 <p>[ Content creator / Very amateur producer  ]</p>
 <br>
-<a href="https://discord.gg/vEhBNP3mvJ" target="_blank" class="underline">Discord</a> | <a href="https://steamcommunity.com/id/astridlol" target="_blank" class="underline">Steam</a> | <a href="https://twitter.com/@hereastridwas" target="_blank" class="underline">Twitter</a>
+<a href="https://discord.gg/vEhBNP3mvJ" target="_blank" class="underline">Discord</a> | <a href="https://steamcommunity.com/id/astridlol" target="_blank" class="underline">Steam</a> | <a href="https://twitter.com/@hereastridwas" target="_blank" class="underline">X</a>
 <br>
 <br>
-<h1>PSA!!</h1>Threads, Twitter, Instagram, and Meta as a whole are not great platforms to be using, consider some of the open-source alternatives I use linked below!
 <br>
 <br>
 <h1><b>Links and Such</b></h1>
