fix a small typo

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <img src="./WaviestBalloon_files/corner.svg" class="bottomleft" width="75vim">
 <img src="./WaviestBalloon_files/corner.svg" class="bottomright" width="75vim"></div>
 <center>
-	<h1><a href="https://astridwashere.lol" target="_blank" class="underline">Home</a> | <a href="https://astridwashere.lol/Gallery" target="_blank" class="underline">Gallery</a> | <a href="https://astridwashere.lol/notice" target="_blank" class="underline">KOSA</a> | <a href="https://astridwashere.lol/TwoMinus" target="_blank" class="underline">TwoMinus</a></h1>
+	<h1><a href="https://astridwashere.lol" target="_blank" class="underline">Home</a> | <a href="https://astridwashere.lol/Gallery" target="_blank" class="underline">Gallery</a> | <a href="https://astridwashere.lol/notice" target="_blank" class="underline">KOSA</a> | <a href="https://astridwashere.lol/TwoMinus/TwoMinus.html" target="_blank" class="underline">TwoMinus</a></h1>
 <p class="bottomlefttext" style="font-size: 1.85vmin;">[ ASTRIDWASHERE.LOL ]</p>
 </center>
 <center>
