--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<meta name="title" content="Snowy">
-<meta name="description" content="Snowy&#39;s social pages">
-<meta property="twitter:image" content="https://astridwashere.lol/WaviestBalloon_files/Astrid.png">
-<meta property="og:image" content="https://astridwashere.lol/WaviestBalloon_files/Astrid.png">
-<title>Snowy</title>
+<meta name="title" content="jime site">
+<meta name="description" content="i am jime games and i use social media">
+<meta property="twitter:image" content="./WaviestBalloon_files/Astrid.png">
+<meta property="og:image" content="./WaviestBalloon_files/Astrid.png">
+<title>jime site</title>
 <link rel="icon" href="./WaviestBalloon_files/Astrid.png">
 <link rel="stylesheet" href="./WaviestBalloon_files/style.css">
 <script async="" src="./WaviestBalloon_files/invisible.js.download"></script></head>
@@ -18,14 +18,14 @@
 <img src="./WaviestBalloon_files/corner.svg" class="bottomleft" width="75vim">
 <img src="./WaviestBalloon_files/corner.svg" class="bottomright" width="75vim"></div>
 <center>
-	<h1><a href="https://astridwashere.lol" target="_blank" class="underline">Home</a> | <a href="https://astridwashere.lol/Gallery" target="_blank" class="underline">Gallery</a> | <a href="https://astridwashere.lol/notice" target="_blank" class="underline">KOSA</a> | <a href="https://astridwashere.lol/TwoMinus/TwoMinus.html" target="_blank" class="underline">TwoMinus</a></h1>
-<p class="bottomlefttext" style="font-size: 1.85vmin;">[ ASTRIDWASHERE.LOL ]</p>
+	<h1><a href="https://ribs.lol" target="_blank" class="underline">Home</a> | <a href="https://ribs.lol/Gallery" target="_blank" class="underline">Gallery</a> | <a href="https://ribs.lol/notice" target="_blank" class="underline">KOSA</a> | <a href="https://ribs.lol/TwoMinus/TwoMinus.html" target="_blank" class="underline">TwoMinus</a></h1>
+<p class="bottomlefttext" style="font-size: 1.85vmin;">[ jime site ]</p>
 </center>
 <center>
 <br>
 <img src="./WaviestBalloon_files/Astrid.png" style="border-radius: 55px;" width="135vim">
-<h1 style="font-size: 175%;"><b>Snowy</b></h1>
-<p>[ Content creator / Very amateur producer  ]</p>
+<h1 style="font-size: 175%;"><b>DJ Anxiety</b></h1>
+<p>[  AI / Generated  ]</p>
 <br>
 <a href="https://discord.gg/vEhBNP3mvJ" target="_blank" class="underline">Discord</a> | <a href="https://steamcommunity.com/id/astridlol" target="_blank" class="underline">Steam</a> | <a href="https://twitter.com/@hereastridwas" target="_blank" class="underline">X</a>
 <br>
@@ -33,19 +33,19 @@
 <br>
 <br>
 <h1><b>Links and Such</b></h1>
-<div id="section-owo" style="background: linear-gradient(75deg, #5bcefa, #f5a9b8); color: #000000; padding-left: 0%; padding-right: 0%; width: 100%; height: auto;">
+<!--<div id="section-owo" style="background: linear-gradient(75deg, #5bcefa, #f5a9b8); color: #000000; padding-left: 0%; padding-right: 0%; width: 100%; height: auto;">
 <br>
 <img src="./WaviestBalloon_files/owocommunity.png" style="border-radius: 55px;" width="10%">
 <br>
 <h1>Snowy on owo.community<br><br>A social media platform where I shitpost<br>"The zone for literally anything 🐈 Mainly for nerdy tech stuf (ew!) but also for LGBTQ+!"<br><br>Link to my profile <a href="https://owo.community/@snowy" target="_blank" class="underline">here</a></h1>
 <br>
-</div>
+</div>-->
 <hr>
 <div id="section-yt" style="background: #ff3838; color: #ffffff; background-image: url(&#39;./dotlogoutbg.png&#39;); background-size: 25px 25px; background-position: center; background-repeat: repeat; padding-left: 0px; padding-right: 0px; width: 100%; height: auto;">
 <br><br>
 <img src="./WaviestBalloon_files/YouTube_full-color_icon.svg" width="10%">
 <br>
-<h1>Snowy on YouTube<br><br>My YouTube channel that I attempt to upload to<br><i>It's mostly random skits and other compilations I make from games</i><br><br>Link to it <a href="https://youtube.com/@astridlol" target="_blank" class="underline">here</a><br></h1>
+<h1>burnt oven gaming on YouTube<br><br>My YouTube channel that I attempt to upload to<br><i>It's mostly random skits and other compilations I make from games</i><br><br>Link to it <a href="https://youtube.com/@astridlol" target="_blank" class="underline">here</a><br></h1>
 <br>
 </div>
 <hr>
