--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
 <meta name="title" content="jime site">
 <meta name="description" content="i am jime games and i use social media">
-<meta property="twitter:image" content="./WaviestBalloon_files/Astrid.png">
-<meta property="og:image" content="./WaviestBalloon_files/Astrid.png">
+<meta property="twitter:image" content="https://ribs.lol/WaviestBalloon_files/Astrid.png">
+<meta property="og:image" content="https://ribs.lol/WaviestBalloon_files/Astrid.png">
 <title>jime site</title>
 <link rel="icon" href="./WaviestBalloon_files/Astrid.png">
 <link rel="stylesheet" href="./WaviestBalloon_files/style.css">
