change name lol

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <center>
 <br>
 <img src="./WaviestBalloon_files/Astrid.png" style="border-radius: 25px;" width="135vim">
-<h1 style="font-size: 175%;"><b>Axyl</b></h1>
+<h1 style="font-size: 175%;"><b>Astrid</b></h1>
 <p>[  AI / Generated  ]</p>
 <br>
 <a href="https://discord.gg/vEhBNP3mvJ" target="_blank" class="underline">Discord</a> | <a href="https://steamcommunity.com/id/HuaweiP30Pro" target="_blank" class="underline">Steam</a> | <a href="https://x.com/larrywong_123" target="_blank" class="underline">X</a>
